code/human_written_tests/WebAssembly/processed_control_flow_validation/test_call_indirect_16.wast
(assert_invalid
  (module
    (type (func (param f64 i32)))
    (table 0 funcref)
    (func $arity-0-vs-2 (call_indirect (type 0) (i32.const 0)))
  )
  "type mismatch"
)